--- a/static/templates/segunda_tela.html
+++ b/static/templates/segunda_tela.html
@@ -25,12 +25,22 @@
     </form>
 
     <form class="myButton" action="/rodar_script" method="POST">
-        <button type="submit" class="myButton" >Prossiga</button>
+        <button type="submit" class="myButton" >Pesquisar Psicologos</button>
     </form>
     
     <form action="/limpar_arquivos" method="POST">
         <button type="submit" class="limpeza">Limpar Nomes</button>
     </form>
+
+    <form action="/pesquisar_fisioterapeutas" method="POST">
+        <button type="submit" class="FISIO">Pesquisar Fisioterapeutas</button>
+    </form>
+
+    <form action="/pesquisar_nutricionistas" method="POST">
+        <button type="submit" class="NUTRI">Pesquisar Nutricionistas</button>
+    </form>
+
+    <h2>não se esqueça de sempre limpar os nomes antes de pesquisar profissões diferentes!! ;)))</h2>
 
     <!--<div class="myButton">
         <a href="/rodar_script" methods="GET">prossiga</a>
